[package]
name = "livepeer_monitor"
version = "1.0.0"
authors = ["Theo Barollet <theo@stake.capital>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { git = "https://github.com/tomusdrw/rust-web3", features = ["ws"] }
config = "0.10.1"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
chrono = "0.4.10"
