[package]
name = "log_dispatcher"
version = "1.0.0"
authors = ["Theo Barollet <theo.barollet@ensimag.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10.1"
reqwest = { version = "0.10", features = ["blocking"] }

