[package]
name = "log_dispatcher"
version = "1.0.0"
authors = ["Theo Barollet <theo@stake.capital>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10.1"
reqwest = { version = "0.10", features = ["blocking"] }
telegram-bot = {git = "https://github.com/telegram-rs/telegram-bot"}
telegram-bot-raw = {git = "https://github.com/telegram-rs/telegram-bot"}
tokio = { version = "0.2", features = ["rt-core", "macros"] }
