[package]
name = "lpt_watcher"
version = "0.1.0"
authors = ["Theo Barollet <theo.barollet@ensimag.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
config = "0.10.1"
tokio = { version = "0.2", features = ["full"] }
chrono = "0.4.10"
